--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
 h1 {
   font-family: "Manrope", sans-serif;
+  text-align: center;
+}
+.navbar {
+  margin: 0.5%;
 }
 
-.wrapper {
-  width: 500px;
-  margin: 0 auto;
+.container {
+  padding: 1%;
 }
 
 .fixed-footer {
@@ -12,6 +15,6 @@ h1 {
   text-align: center;
   height: 50px;
   width: 100%;
-  position: absolute;
+  position: fixed;
   bottom: 0;
 }
