--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,13 @@ h1 {
 }
 
 .container {
+  position: center;
+  max-width: 900px;
   padding: 1%;
+}
+
+.content {
+  max-width: 800px;
 }
 
 .fixed-footer {
