deleted card form contact page and replaced with rows and form layout

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@ h1 {
   max-width: 800px;
 }
 
+.form-group {
+  position: center;
+}
+
 .fixed-footer {
   color: lightslategray;
   text-align: center;
