--- a/assets/style.css
+++ b/assets/style.css
@@ -1,15 +1,3 @@
-.navbar {
-  background-image: url(./navbar.jpg);
-  font-family: "Ribeye Marrow", cursive;
-  font-weight: bold;
-  color: #022140;
-}
-
-.nav-link,
-.navbar-brand {
-  color: #022140;
-}
-
 body {
   /*background-image: url(./pink_rice.png);*/
   background-color: whitesmoke;
@@ -22,4 +10,33 @@ h1 {
 p {
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
+  color: #022140;
+}
+
+.navbar {
+  background-image: url(./navbar.jpg);
+  font-family: "Ribeye Marrow", cursive;
+  font-weight: bold;
+  color: #022140;
+}
+
+.nav-link,
+.navbar-brand {
+  color: #022140;
+}
+
+.menu li {
+  display: inline;
+}
+
+.fa-linkedin,
+.fa-github,
+.fa-facebook {
+  padding: 10px;
+  width: 30px;
+  font-size: 25px;
+  text-align: center;
+  text-decoration: none;
+  color: #022140;
+  border-radius: 50%;
 }
