--- a/assets/style.css
+++ b/assets/style.css
@@ -40,3 +40,10 @@ p {
   color: #022140;
   border-radius: 50%;
 }
+
+#aboutMeImage {
+  max-width: 100%;
+  height: auto;
+  padding-top: 2rem;
+  padding-left: 2rem;
+}
