--- a/assets/style.css
+++ b/assets/style.css
@@ -3,8 +3,13 @@ body {
   background-color: whitesmoke;
 }
 
-h1 {
+h1,
+h2 {
   font-family: "Ribeye Marrow", cursive;
+}
+
+h2 {
+  font-size: 25px;
 }
 
 p {
@@ -15,13 +20,13 @@ p {
 
 img {
   padding-bottom: 2rem;
-  transition: transform 0.5s ease;
+  transition: transform 0.8s ease;
 }
 
 img:hover {
-  -ms-transform: scale(1.5);
-  -webkit-transform: scale(1.5);
-  transform: scale(1.5);
+  -ms-transform: scale(1.3);
+  -webkit-transform: scale(1.3);
+  transform: scale(1.3);
 }
 
 .navbar {
@@ -42,7 +47,8 @@ img:hover {
 
 .fa-linkedin,
 .fa-github,
-.fa-facebook {
+.fa-facebook,
+.fa-file {
   padding: 10px;
   width: 30px;
   font-size: 25px;
@@ -50,6 +56,11 @@ img:hover {
   text-decoration: none;
   color: #022140;
   border-radius: 50%;
+}
+
+.card-link {
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
 }
 
 #aboutMeImage {
